// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`one branch generation 1`] = `"MATCH (root:\`Root\`) RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`one branch generation 2`] = `
Object {
  "limit": 100,
}
`;

exports[`one branch with one value generation 1`] = `"MATCH (root:\`Root\`), (root:\`Root\`)-[r0:\`LINKED_TO\`]->(node:\`Node\`) WHERE node.Nid = $node_Nid RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`one branch with one value generation 2`] = `
Object {
  "limit": 100,
  "node_Nid": "Vid",
}
`;

exports[`one branch with two value generation 1`] = `"MATCH (root:\`Root\`), (root:\`Root\`)-[r0:\`LINKED_TO\`]->(node:\`Node\`) WHERE node.Nid IN $node_Nid RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`one branch with two value generation 2`] = `
Object {
  "limit": 100,
  "node_Nid": Array [
    "Vid",
    "Vid2",
  ],
}
`;

exports[`one long-branch generation 1`] = `"MATCH (root:\`Root\`) RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`one long-branch generation 2`] = `
Object {
  "limit": 100,
}
`;

exports[`one long-branch with two values generation 1`] = `"MATCH (root:\`Root\`), (root:\`Root\`)-[r0:\`LINKED_TO1\`]->(node1:\`Node\`), (node1:\`Node\`)-[r1:\`LINKED_TO2\`]->(node2:\`Node\`) WHERE node1.Nid = $node1_Nid AND node2.Nid = $node2_Nid RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`one long-branch with two values generation 2`] = `
Object {
  "limit": 100,
  "node1_Nid": "Vid",
  "node2_Nid": "Vid2",
}
`;

exports[`one long-branch with value leaf generation 1`] = `"MATCH (root:\`Root\`), (node1:\`Node\`)-[r0:\`LINKED_TO2\`]->(node2:\`Node\`), (root:\`Root\`)-[r1:\`LINKED_TO1\`]->(node1:\`Node\`) WHERE node2.Nid = $node2_Nid RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`one long-branch with value leaf generation 2`] = `
Object {
  "limit": 100,
  "node2_Nid": "Vid",
}
`;

exports[`one long-branch with value mid generation 1`] = `"MATCH (root:\`Root\`), (root:\`Root\`)-[r0:\`LINKED_TO1\`]->(node1:\`Node\`) WHERE node1.Nid = $node1_Nid RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`one long-branch with value mid generation 2`] = `
Object {
  "limit": 100,
  "node1_Nid": "Vid",
}
`;

exports[`one very long-branch with value leaf generation 1`] = `"MATCH (root:\`Root\`), (label2:\`Label2\`)-[r0:\`LINKED_TO3\`]->(label3:\`Label3\`), (label1:\`Label1\`)-[r1:\`LINKED_TO2\`]->(label2:\`Label2\`), (root:\`Root\`)-[r2:\`LINKED_TO1\`]->(label1:\`Label1\`) WHERE label3.Nid = $label3_Nid RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`one very long-branch with value leaf generation 2`] = `
Object {
  "label3_Nid": "Vid3",
  "limit": 100,
}
`;

exports[`root only generation 1`] = `"MATCH (root:\`Root\`) RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`root only generation 2`] = `
Object {
  "limit": 100,
}
`;

exports[`root only with value generation 1`] = `"MATCH (root:\`Root\`) WHERE root.id = $root_id RETURN DISTINCT root.name AS name, root.id AS id LIMIT $limit"`;

exports[`root only with value generation 2`] = `
Object {
  "limit": 100,
  "root_id": "Rid",
}
`;
